src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Annual Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Received__c</fullName>
        <label>Interest Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <inlineHelpText>Last Payment Date on the Opportunity</inlineHelpText>
        <label>Last Payment Date</label>
        <summarizedField>Drawdown__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Account_Owner__c</fullName>
        <description>Field used for reporting purposes.</description>
        <formula>Law_Firm__r.Owner.FirstName &amp; &quot; &quot; &amp; Law_Firm__r.Owner.LastName</formula>
        <label>Law Firm Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Authorization_Clause__c</fullName>
        <description>This field is sued to show/hide the authorization clause in the loan documents</description>
        <formula>TEXT(Law_Firm__r.Authorization_Clause__c)</formula>
        <label>Law Firm Authorization Clause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_City__c</fullName>
        <formula>Law_Firm__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Id__c</fullName>
        <description>Field used for the jump off report.</description>
        <formula>Law_Firm__r.Id</formula>
        <label>Law Firm Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm Lawyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding Opportunity</relationshipLabel>
        <relationshipName>Onboarding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Name_W2L__c</fullName>
        <label>Law Firm Name W2L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Postal_Code__c</fullName>
        <formula>Law_Firm__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Province__c</fullName>
        <formula>Law_Firm__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm_Street__c</fullName>
        <formula>Law_Firm__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Law Firm Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred Cases</relationshipLabel>
        <relationshipName>Referred_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lawyer_Email__c</fullName>
        <formula>Lawyer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lawyer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lawyer_Id__c</fullName>
        <description>Field used for the contact jump of report.</description>
        <formula>Lawyer__r.Id</formula>
        <label>Lawyer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lawyer_Name_from_W2L__c</fullName>
        <label>Lawyer Name from W2L</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lawyer_Phone__c</fullName>
        <formula>Lawyer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lawyer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lawyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Cases</relationshipLabel>
        <relationshipName>Referred_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Amt_minus_Admin_Fee__c</fullName>
        <formula>Amount - Admin_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amt minus Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Available_to_Drawdown__c</fullName>
        <formula>CASE(
TEXT(Type_of_Loan__c), 
&quot;Facility Loan&quot;, Amount - Drawdown_Total__c,
&quot;Lum-Sum&quot;, 0,
&quot;Treatment Loan&quot;, Amount - Total_Paid_Service_Provider__c,
&quot;Treatment Loan 2&quot;, Amount - Total_Paid_Service_Provider__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Available to Drawdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Declined_Reason__c</fullName>
        <label>Loan Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriter Recommendation</fullName>
                </value>
                <value>
                    <fullName>Lawyer Not Supportive of Application</fullName>
                </value>
                <value>
                    <fullName>Client Got a Loan From a Different Lender</fullName>
                </value>
                <value>
                    <fullName>US Claim</fullName>
                </value>
                <value>
                    <fullName>Client Has an Undischarged Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Client Is Involved in a Class-Action Suit</fullName>
                </value>
                <value>
                    <fullName>Client Abandoned Process-no reason given (Stopped Responding)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Requests__c</fullName>
        <label>Loan Requests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Loan</fullName>
                </value>
                <value>
                    <fullName>2nd Loan</fullName>
                </value>
                <value>
                    <fullName>3rd Loan</fullName>
                </value>
                <value>
                    <fullName>4th Loan</fullName>
                </value>
                <value>
                    <fullName>5th Loan</fullName>
                </value>
                <value>
                    <fullName>6th Loan</fullName>
                </value>
                <value>
                    <fullName>7th Loan</fullName>
                </value>
                <value>
                    <fullName>8th Loan</fullName>
                </value>
                <value>
                    <fullName>9th Loan</fullName>
                </value>
                <value>
                    <fullName>10th Loan</fullName>
                </value>
                <value>
                    <fullName>11th Loan</fullName>
                </value>
                <value>
                    <fullName>12th Loan</fullName>
                </value>
                <value>
                    <fullName>13th Loan</fullName>
                </value>
                <value>
                    <fullName>14th Loan</fullName>
                </value>
                <value>
                    <fullName>15th Loan</fullName>
                </value>
                <value>
                    <fullName>16th Loan</fullName>
                </value>
                <value>
                    <fullName>17th Loan</fullName>
                </value>
                <value>
                    <fullName>18th Loan</fullName>
                </value>
                <value>
                    <fullName>19th Loan</fullName>
                </value>
                <value>
                    <fullName>20th Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <inlineHelpText>Use this field to indicate the current status of the loan.</inlineHelpText>
        <label>Loan Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Closed - Paid</fullName>
                </value>
                <value>
                    <fullName>Closed - Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Closed - Bad Debt - Making Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MVA</fullName>
                    <label>1 - MVA</label>
                </value>
                <value>
                    <fullName>Slip and Fall</fullName>
                    <label>2 - Slip &amp; Fall</label>
                </value>
                <value>
                    <fullName>STD/LTD</fullName>
                    <label>3 - STD/LTD</label>
                </value>
                <value>
                    <fullName>Product Liability</fullName>
                    <label>4 - Product Liability</label>
                </value>
                <value>
                    <fullName>Medical Malpractice</fullName>
                    <label>5 - Medical Malpractice</label>
                </value>
                <value>
                    <fullName>Employment</fullName>
                    <label>6 - Employment</label>
                </value>
                <value>
                    <fullName>Sexual Assault</fullName>
                    <label>7 - Sexual Assault</label>
                </value>
                <value>
                    <fullName>8 - Settled Cases</fullName>
                </value>
                <value>
                    <fullName>9 - Other</fullName>
                </value>
                <value>
                    <fullName>10 - Class Action</fullName>
                </value>
                <value>
                    <fullName>11 - U.S. Cases</fullName>
                </value>
                <value>
                    <fullName>12 - Uncategorized</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_being_consolidated__c</fullName>
        <label>Loan being consolidated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LumpSum_Drawdown_Description__c</fullName>
        <description>Field used in the Lump sum drawdown automated process</description>
        <formula>&quot;ELF File: &quot; &amp; Primary_Contact__r.ELF_File_No__c &amp; &quot; - Customer: &quot; &amp; Primary_Contact__r.FirstName &amp; &quot;, &quot; &amp; Primary_Contact__r.LastName &amp; &quot; - Court File No.: &quot; &amp; Court_File_No__c</formula>
        <label>LumpSum Drawdown Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This is the Message that was entered on the Web To Lead form.</description>
        <label>Message from W2L</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Interest_Period__c</fullName>
        <label>Minimum Interest Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 months</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>5 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                    <default>true</default>
                    <label>6 months</label>
                </value>
                <value>
                    <fullName>7 months</fullName>
                </value>
                <value>
                    <fullName>8 months</fullName>
                </value>
                <value>
                    <fullName>9 months</fullName>
                </value>
                <value>
                    <fullName>10 months</fullName>
                </value>
                <value>
                    <fullName>11 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Months_Outstanding_as_of_To_Date__c</fullName>
        <formula>IF(ISBLANK(Reporting_To_Date__c ) || ISBLANK(Date_of_advance__c )
,0
, (((YEAR(Reporting_To_Date__c ) - YEAR(Date_of_advance__c ) ) * 12) + (MONTH(Reporting_To_Date__c ) -  MONTH(Date_of_advance__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of months between date of advance and reporting to date.   Will go to end of loan if loan was closed in reporting period.</inlineHelpText>
        <label>Months Outstanding as of To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Lawyer_Contact__c</fullName>
        <description>This checkbox defines if the running user is associated to the lawyer of the opportunity based on its line of business and the customer line of business</description>
        <formula>IF(
AND(
RecordType.DeveloperName = &quot;Client_Opportunity_Record_Type&quot;,
TEXT(Account.Business_Unit__c) = TEXT($User.Business_Unit__c),
OR(
Lawyer__r.OwnerId = $User.Id,
Lawyer__r.Secondary_Contact_Owner__c = $User.Id
)
)
, True
, False
)</formula>
        <inlineHelpText>This checkbox defines if the running user is associated to the lawyer of the opportunity based on its line of business and the customer line of business</inlineHelpText>
        <label>My Lawyer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOTE_For_Paralegals__c</fullName>
        <label>NOTE For Paralegals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Court_File__c</fullName>
        <formula>Name_of_Court__c &amp;&quot; / &quot;&amp; Court_File_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Court &amp; File #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Court__c</fullName>
        <label>Name of Court</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Lender__c</fullName>
        <label>Name of Lender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_Injury_from_W2L__c</fullName>
        <label>Nature of Injury from W2L</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_Replacement_Counsel_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Replacement Counsel Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oldest_Unallocated_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Stores the id of the oldest payment not fully allocated.  This will be used to kick off payment allocation when a new drawdown is inserted/updated.    This field will be maintained by DLRS and should not be updated manually.</inlineHelpText>
        <label>Oldest Unallocated Payment</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Long_Name__c</fullName>
        <formula>Name &amp;&quot; - &quot;&amp; TEXT(Loan_Requests__c) &amp; &quot; - &quot;&amp; TEXT(Loan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>for concatenating the standard name with some other fields</description>
        <formula>Hyperlink(&quot;/&quot;+Id,Name &amp;&quot; - &quot;&amp; TEXT(Loan_Requests__c) &amp; &quot; - &quot;&amp; TEXT(Loan_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Roll_Up__c</fullName>
        <label>Other Fee Roll-Up</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Lawyer_Law_Firm_that_acted__c</fullName>
        <label>Other Lawyer / Law Firm that acted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_as_of_To_Date__c</fullName>
        <inlineHelpText>Outstanding Balance on the Reporting To date.  Used for ELFI 1 report.  Note that this field is just labeled &quot;Outstanding Balance&quot; on the report (label changed via report type).</inlineHelpText>
        <label>Outstanding Balance as of To Date</label>
        <summarizedField>Drawdown__c.Outstanding_Balance_as_of_To_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outstanding_Days__c</fullName>
        <formula>(Payout_Date__c+1) - Date_of_advance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_File_Status__c</fullName>
        <description>Used in the WIP report to filter our closed re-assessments</description>
        <formula>TEXT(Re_Assessed_Loan__r.StageName)</formula>
        <label>Parent Opportunity File Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4rd</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
                <value>
                    <fullName>26th</fullName>
                </value>
                <value>
                    <fullName>27th</fullName>
                </value>
                <value>
                    <fullName>28th</fullName>
                </value>
                <value>
                    <fullName>29th</fullName>
                </value>
                <value>
                    <fullName>30th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Roll_up__c</fullName>
        <label>Payment Roll-up</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payout_Balance__c</fullName>
        <inlineHelpText>Balance as of Payout Date</inlineHelpText>
        <label>Payout Balance</label>
        <summarizedField>Drawdown__c.Outstanding_Balance_as_of_Payout_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payout_Date__c</fullName>
        <label>Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payout_Interest__c</fullName>
        <inlineHelpText>Interest to Payout Date</inlineHelpText>
        <label>Payout Interest</label>
        <summarizedField>Drawdown__c.Accrued_Interest_as_of_Payout_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payout_Statements_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payout Statements on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Amount__c</fullName>
        <label>% Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Existing_Loan_Amount__c</fullName>
        <label>Pre-Existing Loan Amount $</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Existing_Settlement_Loans_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Existing Settlement Loans on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_City__c</fullName>
        <formula>Primary_Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Postal_Code__c</fullName>
        <formula>Primary_Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Province__c</fullName>
        <formula>Primary_Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Street__c</fullName>
        <formula>Primary_Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Borrowed_as_of_To_Date__c</fullName>
        <inlineHelpText>Amount borrowed as it was on the Reporting To Date. Excludes anything which was already paid off before the reporting period as well borrowed afterwards and things which do not accrue interest(Payments, Referral Fees, Payments Re-Proc/Rejected)</inlineHelpText>
        <label>Principal Borrowed as of To Date</label>
        <summarizedField>Drawdown__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Include_in_Portfolio_Reports__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Principal_Received__c</fullName>
        <label>Principal Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principle_Sum_to_be_paid_to_Borrower__c</fullName>
        <formula>Amount - First_Drawdown_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Products_of_Interest__c</fullName>
        <label>Products of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products_of_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Assessed_Loan_Name__c</fullName>
        <formula>Re_Assessed_Loan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-Assessed Loan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Assessed_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Re-Assessed Loan</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Re-Assessments</relationshipLabel>
        <relationshipName>Re_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeDev__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>RecordTypeDev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by_from_W2L__c</fullName>
        <label>Referred by from W2L</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_date_deprecated__c</fullName>
        <formula>Date(YEAR(Date_Financing_Statement_Expires__c), (MONTH(Date_Financing_Statement_Expires__c) - 1), DAY(Date_Financing_Statement_Expires__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal date (deprecated)</label>
        <type>Date</type>
    </fields>
</CustomObject>